--- a/.i3status.conf
+++ b/.i3status.conf
@@ -3,14 +3,26 @@ general {
         interval = 5
 }
 
+# Have:
+# time : time
+# load : load
+# disk : disk /
+# volume : volume_master
+# wireless : wireless wlp0s20fs
+# battery : battery 0
+# memory : memory
+# cpu temp : cpu_temperature 0
+
 order += "disk /"
 order += "load"
-order += "volume master"
+order += "memory"
+order += "cpu_temperature 0"
+order += "battery 0"
+order += "volume_master"
 order += "time"
 
-
 time {
-	format = " %I:%M %p %Y-%m-%d"
+	format = " %I:%M %p %m-%d-%Y"
 }
 
 load {
@@ -26,4 +38,31 @@ volume master {
   device = "default"
   mixer = "Master"
   mixer_idx = 0
+}
+
+wireless wlp0s20f3 {
+	format_up = "W: (%quality at %essid, %bitrate)"
+	format_down = "W: down"
+}
+
+battery 0 {
+	format = "%status %percentage"
+	format_down = "No battery"
+	status_chr = "CHR"
+	status_bat = "BAT"
+	status_unk = "UNK"
+	status_full = "FULL"
+	path = "/sys/class/power_supply/BAT%d/uevent"
+	low_threshold = 20
+}
+
+memory {
+	format = "%used"
+	threshold_degraded = "10%"
+	format_degraded = "MEM: %free"
+}
+#
+cpu_temperature 0 {
+	format = "CPU T: %degrees °C"
+	path = "/sys/devices/platform/coretemp.0/temp1_input"
 }
