CPU Temp & module spacing

--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -2,18 +2,17 @@
 disabled = #707880
 background = #3c3836
 foreground = #d5c4a1
-separator = #32302f
+separator = #696563
 active-bg = #32302f
 active-underline = #32302f
 alert = #504945
-;disabled = #3c3836
 light-text = #d5c4a1
 active-text = #fabd2f
 
 [bar/gruvbox]
 width = 100%
-height = 30pt
-radius = 6
+height = 27pt
+radius = 9
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -26,13 +25,15 @@ border-color = #00000000
 padding-left = 0
 padding-right = 2
 
-separator = ⎮
+separator = |
 separator-foreground = ${colors.separator}
+
+module-margin = 1px
 
 font-0 = monospace;2
 
 modules-left = xworkspaces
-modules-right = filesystem battery pulseaudio memory cpu date
+modules-right = filesystem battery pulseaudio memory cpu temperature date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -44,8 +45,6 @@ bottom = true
 tray-position = right
 
 wm-restack = i3
-
-#override-redirect = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -125,6 +124,14 @@ date = " %I:%M %p %m/%d/%Y"
 
 label = %date%
 label-foreground = ${colors.light-text}
+
+[module/temperature]
+type = internal/temperature
+interval = 0.5
+thermal-zone = 0
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
+units = true
+label = "TEMP %temperature-c%"
 
 [settings]
 screenchange-reload = true
