--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -1,39 +1,55 @@
 [colors]
-disabled = #707880
-background = #3c3836
-foreground = #d5c4a1
-separator = #696563
-active-bg = #32302f
-active-underline = #32302f
-alert = #504945
-light-text = #d5c4a1
-active-text = #fabd2f
+disabled=#707880
+
+background=#3c3836
+foreground=#d5c4a1
+
+active-bg=#32302f
+active-underline=#fabd2f
+active-text=#fabd2f
+
+separator=#696563
+
+passive-text=#5e5855
+passive-bg=#707880
+
+alert=#ff5c33
+
+green = #00ff00
+
+light-text=#d5c4a1
 
 [bar/gruvbox]
 width = 100%
-height = 27pt
-radius = 9
+height = 34pt
+;radius = 6
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 5pt
 
-border-size = 5pt
+border-size = 0pt
 border-color = #00000000
 
-padding-left = 0
-padding-right = 2
+;padding-left = 0
+;padding-right = 2
 
-separator = |
-separator-foreground = ${colors.separator}
+;separator = |
+;separator-foreground = ${colors.separator}
 
 module-margin = 1px
 
-font-0 = monospace;2
+font-0 = monospace
+font-1 = FontAwesome
+font-2 = MaterialDesignIconsDesktop
+font-3 = Weather Icons:style=Regular
+font-4 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
+; font-5 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
 
-modules-left = xworkspaces
-modules-right = filesystem battery pulseaudio memory cpu temperature date
+modules-left = xworkspaces music-prev music-playpause music-next  music 
+modules-right = battery pulseaudio cpu temperature memory weather date
+;modules-center = music
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -42,9 +58,14 @@ enable-ipc = true
 
 bottom = true
 
+fixed-center = true
+
 tray-position = right
 
 wm-restack = i3
+
+override-redirect = true
+
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -66,6 +87,7 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
+
 [module/filesystem]
 type = internal/fs
 interval = 25
@@ -77,53 +99,118 @@ label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
+format-padding = 1px
+format-underline = ${colors.active-underline}
+
+
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "♪: "
+format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.light-text}
+format-volume-prefix-font = 1
 format-volume = <label-volume>
 
-label-volume = %percentage%%
+label-volume = %percentage:2%%
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-muted = "󰖁 %percentage%%"
+label-muted-foreground = ${colors.light-text}
+format-muted-padding = 1px
+format-muted-underline = ${colors.alert}
+format-muted-font = 1
+
+format-volume-padding = 1px
+format-volume-underline = ${colors.active-underline}
+
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM: "
+format-prefix = "󰧑 "
 format-prefix-foreground = ${colors.light-text}
+format-prefix-font = 2
+
+format-padding = 1px
+format-underline = ${colors.active-underline}
+
 label = %percentage_used:2%%
+
 
 [module/battery]
 type = internal/battery
-full-at = 84
-low-at = 10
+full-at = 100
+low-at = 20
 battery = BAT0
-format-charging = <label-charging>
-format-discharging = <label-discharging>
+
+format-charging = <animation-charging> <label-charging>
+label-charging = "%percentage%%"
+format-charging-padding = 1px
+format-charging-underline = ${colors.active-underline}
+format-charging-font = 2
+
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging = "%percentage%%"
+format-discharging-padding = 1px
+format-discharging-underline = ${colors.active-underline}
+format-discharging-font = 2
+
 format-full = <label-full>
-label-full = "FULL: %percentage%%"
-label-charging = "CHR: %percentage%%"
-label-discharging = "BAT: %percentage%%"
-poll-interval = 5
+label-full = "%percentage%%"
+format-full-padding = 1px
+format-full-underline = ${colors.green}
+format-full-font = 2
+
+format-low = <label-low>
+label-low = "%percentage%%"
+format-low-padding = 1px
+format-low-underline = ${colors.alert}
+format-low-font = 2
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-framerate = 1000
+
+poll-interval = 0.5
+interval = 0.5
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU: "
+format-prefix = " "
+format-prefix-font = 1
 format-prefix-foreground = ${colors.light-text}
-label = "%percentage%% "
+label = "%percentage:2%%"
+
+format-padding = 1px
+format-underline = ${colors.active-underline}
+
+warn-percentage = 80
+label-warn = "%percentage:2%%"
+format-warn-underline = ${colors.alert}
+
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = " %I:%M %p %m/%d/%Y"
+date = " %l:%M %p   %m/%d/%Y"
 
 label = %date%
 label-foreground = ${colors.light-text}
+
+format-padding = 1px
+format-underline = ${colors.active-underline}
+
+format-font = 1
+
 
 [module/temperature]
 type = internal/temperature
@@ -131,7 +218,55 @@ interval = 0.5
 thermal-zone = 0
 hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
 units = true
-label = "TEMP %temperature-c%"
+label = " %temperature-c%"
+
+format-padding = 1px
+format-underline = ${colors.active-underline}
+
+
+[module/music]
+type = custom/script
+interval = 0.5
+label = %output%
+exec = $HOME/.config/polybar/music.sh
+
+format-padding = 1px
+format-font = 2
+
+[module/music-prev]
+type = custom/script
+label = %output%
+format-label-font = 6
+format-label-foreground = ${colors.light-text}
+exec = $HOME/.config/polybar/prev.sh 0
+click-left = exec $HOME/.config/polybar/prev.sh 1
+
+[module/music-playpause]
+type = custom/script
+interval = 0.1
+label = %output%
+format-label-font = 4
+format-label-foreground = ${colors.light-text}
+exec = $HOME/.config/polybar/playpause.py 0
+click-left = exec $HOME/.config/polybar/playpause.py 1
+
+[module/music-next]
+type = custom/script
+label = %output%
+format-label-font = 6
+format-label-foreground = ${colors.light-text}
+exec = $HOME/.config/polybar/next.sh 0
+click-left = exec $HOME/.config/polybar/next.sh 1
+
+[module/weather]
+type = custom/script
+interval = 30
+label = %output%
+format-label-font = 4
+; format-padding = 1px
+exec = $HOME/.config/polybar/weather
+format-underline = ${colors.active-underline}
+
 
 [settings]
 screenchange-reload = true
