--- a/.config/i3/config
+++ b/.config/i3/config
@@ -39,7 +39,7 @@ bindsym $mod+n exec "xpad -n"
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -config ~/.config/rofi/config.rasi -no-lazy-grab -scroll-method 1 -show run
 
 # change focus
 bindsym $mod+j focus left
