Low battery animation

--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -138,7 +138,7 @@ label = %percentage_used:2%%
 
 [module/battery]
 type = internal/battery
-full-at = 100
+full-at = 85
 low-at = 20
 battery = BAT0
 
@@ -160,15 +160,21 @@ format-full-padding = 1px
 format-full-underline = ${colors.green}
 format-full-font = 2
 
-format-low = <label-low>
+format-low = <animation-low> <label-low>
 label-low = "%percentage%%"
 format-low-padding = 1px
 format-low-underline = ${colors.alert}
 format-low-font = 2
 
+;ramp-capacity-0 = 
+;ramp-capacity-1 = 
+;ramp-capacity-2 = 
+;ramp-capacity-3 = 
+;ramp-capacity-4 = 
+
 ramp-capacity-0 = 
 ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 
@@ -177,6 +183,10 @@ animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-framerate = 1000
+
+animation-low-0 = 
+animation-low-1 = " "
+animation-low-framerate = 500
 
 poll-interval = 0.5
 interval = 0.5
