refactored music player script

--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -15,7 +15,7 @@ passive-bg=#707880
 
 alert=#ff5c33
 
-green = #00ff00
+green = #40bf40
 
 light-text=#d5c4a1
 
@@ -37,6 +37,9 @@ border-color = #00000000
 
 ;separator = |
 ;separator-foreground = ${colors.separator}
+
+monitor = DP-2
+monitor-fallback = eDP-1
 
 module-margin = 1px
 
@@ -138,7 +141,7 @@ label = %percentage_used:2%%
 
 [module/battery]
 type = internal/battery
-full-at = 85
+full-at = 100
 low-at = 20
 battery = BAT0
 
@@ -154,7 +157,7 @@ format-discharging-padding = 1px
 format-discharging-underline = ${colors.active-underline}
 format-discharging-font = 2
 
-format-full = <label-full>
+format-full = <ramp-capacity> <label-full>
 label-full = "%percentage%%"
 format-full-padding = 1px
 format-full-underline = ${colors.green}
@@ -238,7 +241,7 @@ format-underline = ${colors.active-underline}
 type = custom/script
 interval = 0.5
 label = %output%
-exec = $HOME/.config/polybar/music.sh
+exec = $HOME/.config/polybar/music_ctl.sh info
 
 format-padding = 1px
 format-font = 2
@@ -248,8 +251,8 @@ type = custom/script
 label = %output%
 format-label-font = 6
 format-label-foreground = ${colors.light-text}
-exec = $HOME/.config/polybar/prev.sh 0
-click-left = exec $HOME/.config/polybar/prev.sh 1
+exec = $HOME/.config/polybar/music_ctl.sh player prev
+click-left = exec $HOME/.config/polybar/music_ctl.sh player prev 1
 
 [module/music-playpause]
 type = custom/script
@@ -257,16 +260,16 @@ interval = 0.1
 label = %output%
 format-label-font = 4
 format-label-foreground = ${colors.light-text}
-exec = $HOME/.config/polybar/playpause.py 0
-click-left = exec $HOME/.config/polybar/playpause.py 1
+exec = $HOME/.config/polybar/music_ctl.sh player playpause 
+click-left = exec $HOME/.config/polybar/music_ctl.sh player playpause 1
 
 [module/music-next]
 type = custom/script
 label = %output%
 format-label-font = 6
 format-label-foreground = ${colors.light-text}
-exec = $HOME/.config/polybar/next.sh 0
-click-left = exec $HOME/.config/polybar/next.sh 1
+exec = $HOME/.config/polybar/music_ctl.sh player next
+click-left = exec $HOME/.config/polybar/music_ctl.sh player next 1
 
 [module/weather]
 type = custom/script
