--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -16,6 +16,7 @@ passive-bg=#707880
 alert=#ff5c33
 
 green = #40bf40
+success = #40bf40
 
 light-text=#d5c4a1
 
@@ -31,6 +32,8 @@ line-size = 5pt
 
 border-size = 0pt
 border-color = #00000000
+
+enable-ipc = true
 
 ;padding-left = 0
 ;padding-right = 2
@@ -51,13 +54,12 @@ font-4 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
 ; font-5 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
-modules-right = battery pulseaudio cpu temperature memory weather date
+modules-right =  battery-script pulseaudio cpu temperature memory weather date
 ;modules-center = music
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-enable-ipc = true
 
 bottom = true
 
@@ -68,7 +70,6 @@ tray-position = right
 wm-restack = i3
 
 override-redirect = true
-
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -144,6 +145,7 @@ type = internal/battery
 full-at = 100
 low-at = 20
 battery = BAT0
+time-format = %H:%M
 
 format-charging = <animation-charging> <label-charging>
 label-charging = "%percentage%%"
@@ -280,6 +282,13 @@ format-label-font = 4
 exec = $HOME/.config/polybar/weather
 format-underline = ${colors.active-underline}
 
+[module/battery-script]
+type = custom/script
+label = %output%
+format-label-font = 6
+exec = $HOME/.config/polybar/battery.py
+click-left = exec $HOME/.config/polybar/statuses.py toggle_status battery
+interval = 1
 
 [settings]
 screenchange-reload = true
