various refactoring changes

--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -243,7 +243,7 @@ format-underline = ${colors.active-underline}
 type = custom/script
 interval = 0.5
 label = %output%
-exec = $HOME/.config/polybar/music_ctl.sh info
+exec = $HOME/.config/polybar/music_ctl.sh info 2> $HOME/.config/polybar/scriptlog.txt
 
 format-padding = 1px
 format-font = 2
@@ -254,7 +254,7 @@ label = %output%
 format-label-font = 6
 format-label-foreground = ${colors.light-text}
 exec = $HOME/.config/polybar/music_ctl.sh player prev
-click-left = exec $HOME/.config/polybar/music_ctl.sh player prev 1
+click-left = exec $HOME/.config/polybar/music_ctl.sh player prev 1 2> $HOME/.config/polybar/scriptlog.txt
 
 [module/music-playpause]
 type = custom/script
@@ -262,16 +262,16 @@ interval = 0.1
 label = %output%
 format-label-font = 4
 format-label-foreground = ${colors.light-text}
-exec = $HOME/.config/polybar/music_ctl.sh player playpause 
-click-left = exec $HOME/.config/polybar/music_ctl.sh player playpause 1
+exec = $HOME/.config/polybar/music_ctl.sh player playpause  2> $HOME/.config/polybar/scriptlog.txt
+click-left = exec $HOME/.config/polybar/music_ctl.sh player playpause 1 2> $HOME/.config/polybar/scriptlog.txt
 
 [module/music-next]
 type = custom/script
 label = %output%
 format-label-font = 6
 format-label-foreground = ${colors.light-text}
-exec = $HOME/.config/polybar/music_ctl.sh player next
-click-left = exec $HOME/.config/polybar/music_ctl.sh player next 1
+exec = $HOME/.config/polybar/music_ctl.sh player next 2> $HOME/.config/polybar/scriptlog.txt
+click-left = exec $HOME/.config/polybar/music_ctl.sh player next 1 2> $HOME/.config/polybar/scriptlog.txt
 
 [module/weather]
 type = custom/script
@@ -286,8 +286,8 @@ format-underline = ${colors.active-underline}
 type = custom/script
 label = %output%
 format-label-font = 6
-exec = $HOME/.config/polybar/battery.py
-click-left = exec $HOME/.config/polybar/statuses.py toggle_status battery
+exec = $HOME/.config/polybar/battery.py 2> $HOME/.config/polybar/scriptlog.txt
+click-left = exec $HOME/.config/polybar/statuses.py toggle_status battery 2> $HOME/.config/polybar/scriptlog.txt
 interval = 1
 
 [settings]
