--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -20,66 +20,61 @@ success = #40bf40
 
 light-text=#d5c4a1
 
+
 [bar/gruvbox]
 width = 100%
 height = 34pt
-;radius = 6
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 5pt
+; Underline/overline line weight
+line-size = 3pt
 
-border-size = 0pt
-border-color = #00000000
-
+; Required for any polybar-msg
 enable-ipc = true
 
-;padding-left = 0
-;padding-right = 2
-
-;separator = |
-;separator-foreground = ${colors.separator}
-
+; Default to external monitor, fallback to laptop when not docked
 monitor = DP-2
 monitor-fallback = eDP-1
 
 module-margin = 1px
 
+; modules default to font-0
+; font references are 1-indexed
 font-0 = monospace
 font-1 = FontAwesome
 font-2 = MaterialDesignIconsDesktop
 font-3 = Weather Icons:style=Regular
 font-4 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
-; font-5 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
 modules-right =  battery-script pulseaudio cpu temperature memory weather date
 ;modules-center = music
 
 cursor-click = pointer
-cursor-scroll = ns-resize
 
-
+; Place bar at the bottom
 bottom = true
-
-fixed-center = true
 
 tray-position = right
 
+; Required for i3 compatability
 wm-restack = i3
-
 override-redirect = true
+
 
 [module/xworkspaces]
 type = internal/xworkspaces
 
+; Active workspace settings
 label-active = %name%
 label-active-background = ${colors.active-bg}
 label-active-foreground = ${colors.active-text}
 label-active-underline = ${colors.active-underline}
 label-active-padding = 1
 
+; Inactive workspaces w/ content
 label-occupied = %name%
 label-occupied-padding = 1
 
@@ -87,21 +82,16 @@ label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-
+; Currently inactive
 [module/filesystem]
 type = internal/fs
+
+; seconds
 interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+label-mounted = %mountpoint% %percentage_used%%
 
 format-padding = 1px
 format-underline = ${colors.active-underline}
@@ -110,6 +100,7 @@ format-underline = ${colors.active-underline}
 [module/pulseaudio]
 type = internal/pulseaudio
 
+; Speaker symbol
 format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.light-text}
 format-volume-prefix-font = 1
@@ -117,6 +108,7 @@ format-volume = <label-volume>
 
 label-volume = %percentage:2%%
 
+; Muted speaker w/ volume%
 label-muted = "󰖁 %percentage%%"
 label-muted-foreground = ${colors.light-text}
 format-muted-padding = 1px
@@ -129,7 +121,11 @@ format-volume-underline = ${colors.active-underline}
 
 [module/memory]
 type = internal/memory
+
+; Seconds
 interval = 2
+
+; Brain symbol
 format-prefix = "󰧑 "
 format-prefix-foreground = ${colors.light-text}
 format-prefix-font = 2
@@ -140,19 +136,23 @@ format-underline = ${colors.active-underline}
 label = %percentage_used:2%%
 
 
+; Inactive
 [module/battery]
 type = internal/battery
-full-at = 100
+
 low-at = 20
+
 battery = BAT0
 time-format = %H:%M
 
+; Display charging symbol sequence w/ charge %
 format-charging = <animation-charging> <label-charging>
 label-charging = "%percentage%%"
 format-charging-padding = 1px
 format-charging-underline = ${colors.active-underline}
 format-charging-font = 2
 
+; Display battery symbol which corresponds to current %
 format-discharging = <ramp-capacity> <label-discharging>
 label-discharging = "%percentage%%"
 format-discharging-padding = 1px
@@ -165,17 +165,12 @@ format-full-padding = 1px
 format-full-underline = ${colors.green}
 format-full-font = 2
 
+; Display low symbol sequence w/ charge %
 format-low = <animation-low> <label-low>
 label-low = "%percentage%%"
 format-low-padding = 1px
 format-low-underline = ${colors.alert}
 format-low-font = 2
-
-;ramp-capacity-0 = 
-;ramp-capacity-1 = 
-;ramp-capacity-2 = 
-;ramp-capacity-3 = 
-;ramp-capacity-4 = 
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -187,18 +182,27 @@ animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
+
+; Milliseconds
 animation-charging-framerate = 1000
 
 animation-low-0 = 
 animation-low-1 = " "
+
+; Milliseconds
 animation-low-framerate = 500
 
-poll-interval = 0.5
-interval = 0.5
+; Seconds
+poll-interval = 5
+
 
 [module/cpu]
 type = internal/cpu
+
+; Seconds
 interval = 2
+
+# Speedometer symbol
 format-prefix = " "
 format-prefix-font = 1
 format-prefix-foreground = ${colors.light-text}
@@ -214,8 +218,11 @@ format-warn-underline = ${colors.alert}
 
 [module/date]
 type = internal/date
+
+; Seconds
 interval = 1
 
+; Clock symbol    Calendar symbol
 date = " %l:%M %p   %m/%d/%Y"
 
 label = %date%
@@ -229,9 +236,15 @@ format-font = 1
 
 [module/temperature]
 type = internal/temperature
-interval = 0.5
+
+; Seconds
+interval = 5
+
+; /sys info
 thermal-zone = 0
 hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
+
+; True for Fahrenheit, false for Celsius
 units = true
 label = " %temperature-c%"
 
@@ -241,7 +254,11 @@ format-underline = ${colors.active-underline}
 
 [module/music]
 type = custom/script
+
+; Seconds
 interval = 0.5
+
+; Display script stdout
 label = %output%
 exec = $HOME/.config/polybar/music_ctl.sh info 2> $HOME/.config/polybar/scriptlog.txt
 
@@ -250,48 +267,65 @@ format-font = 2
 
 [module/music-prev]
 type = custom/script
+
+; Display script stdout
 label = %output%
 format-label-font = 6
 format-label-foreground = ${colors.light-text}
+
 exec = $HOME/.config/polybar/music_ctl.sh player prev
 click-left = exec $HOME/.config/polybar/music_ctl.sh player prev 1 2> $HOME/.config/polybar/scriptlog.txt
 
 [module/music-playpause]
 type = custom/script
+
+; Seconds
 interval = 0.1
+
+; Display script stdout
 label = %output%
 format-label-font = 4
 format-label-foreground = ${colors.light-text}
+
 exec = $HOME/.config/polybar/music_ctl.sh player playpause  2> $HOME/.config/polybar/scriptlog.txt
 click-left = exec $HOME/.config/polybar/music_ctl.sh player playpause 1 2> $HOME/.config/polybar/scriptlog.txt
 
 [module/music-next]
 type = custom/script
+
+; Display script stdout
 label = %output%
 format-label-font = 6
 format-label-foreground = ${colors.light-text}
+
 exec = $HOME/.config/polybar/music_ctl.sh player next 2> $HOME/.config/polybar/scriptlog.txt
 click-left = exec $HOME/.config/polybar/music_ctl.sh player next 1 2> $HOME/.config/polybar/scriptlog.txt
 
 [module/weather]
 type = custom/script
+
+; Seconds
 interval = 30
+
+; Display script stdout
 label = %output%
 format-label-font = 4
-; format-padding = 1px
-exec = $HOME/.config/polybar/weather
 format-underline = ${colors.active-underline}
+
+exec = $HOME/.config/polybar/weather
+
 
 [module/battery-script]
 type = custom/script
+
+; Display script stdout
 label = %output%
 format-label-font = 6
+
 exec = $HOME/.config/polybar/battery.py 2> $HOME/.config/polybar/scriptlog.txt
 click-left = exec $HOME/.config/polybar/statuses.py toggle_status battery 2> $HOME/.config/polybar/scriptlog.txt
-interval = 1
 
-[settings]
-screenchange-reload = true
-psuedo-transparency = true
+; Seconds
+interval = 1
 
 ; vim:ft=dosini
