--- a/.config/polybar/gruvbox.ini
+++ b/.config/polybar/gruvbox.ini
@@ -82,6 +82,11 @@ label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
+; Fixes empty padding between workspaces that cross monitors
+label-empty = %name%
+label-empty-foreground = ${colors.disabled}
+label-empty-padding = 1
+
 ; Currently inactive
 [module/filesystem]
 type = internal/fs
