--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -38,10 +38,6 @@ line-size = 4pt
 ; Required for any polybar-msg
 enable-ipc = true
 
-; Default to external monitor, fallback to laptop when not docked
-monitor = DP-2
-monitor-fallback = eDP-1
-
 module-margin = 1px
 
 ; modules default to font-0
@@ -82,7 +78,7 @@ line-size = 4pt
 enable-ipc = true
 
 ; Default to external monitor, fallback to laptop when not docked
-monitor = DP-2
+monitor = ${env:LEFT_MONITOR}
 
 module-margin = 1px
 
@@ -103,14 +99,14 @@ cursor-click = pointer
 ; Place bar at the bottom
 bottom = true
 
-tray-position = right
+tray-position = none
 
 ; Required for i3 compatability
 wm-restack = i3
 override-redirect = true
 
 
-[bar/gruvbox-right]
+[bar/double-right]
 width = 100%
 height = 34pt
 
@@ -123,9 +119,7 @@ line-size = 4pt
 ; Required for any polybar-msg
 enable-ipc = true
 
-; Default to external monitor, fallback to laptop when not docked
-monitor = DP-2
-monitor-fallback = eDP-1
+monitor = ${env:RIGHT_MONITOR}
 
 module-margin = 1px
 
@@ -175,6 +169,9 @@ label-urgent-padding = 1
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
+
+; Show only workspaces on same display as bar
+pin-workspaces = true
 
 ; Currently inactive
 [module/filesystem]
