separated global and bar-specific settings

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -24,8 +24,7 @@ light-text=#d5c4a1
 [settings]
 screenchange-reload = false
 
-
-[bar/single]
+[global-bar]
 width = 100%
 height = 34pt
 
@@ -35,7 +34,7 @@ foreground = ${colors.foreground}
 ; Underline/overline line weight
 line-size = 4pt
 
-; Required for any polybar-msg
+; Required for any polybar-msg functionality
 enable-ipc = true
 
 module-margin = 1px
@@ -48,103 +47,49 @@ font-2 = MaterialDesignIconsDesktop
 font-3 = Weather Icons:style=Regular
 font-4 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
 
-modules-left = xworkspaces music-prev music-playpause music-next  music 
-modules-right =  battery-script pulseaudio cpu temperature memory weather date
-;modules-center = music
-
 cursor-click = pointer
 
-; Place bar at the bottom
 bottom = true
-
-tray-position = right
 
 ; Required for i3 compatability
 wm-restack = i3
 override-redirect = true
+
+
+[bar/single]
+inherit = global-bar
+
+modules-left = xworkspaces music-prev music-playpause music-next  music 
+modules-right =  battery-script pulseaudio cpu temperature memory weather date
+;modules-center = music
+
+tray-output = right
 
 
 [bar/double-left]
-width = 100%
-height = 34pt
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-; Underline/overline line weight
-line-size = 4pt
-
-; Required for any polybar-msg
-enable-ipc = true
-
-; Default to external monitor, fallback to laptop when not docked
-monitor = ${env:LEFT_MONITOR}
-
-module-margin = 1px
-
-; modules default to font-0
-; font references are 1-indexed
-font-0 = monospace
-font-1 = FontAwesome
-font-2 = MaterialDesignIconsDesktop
-font-3 = Weather Icons:style=Regular
-font-4 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
+inherit = global-bar
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
 modules-right =  battery-script pulseaudio cpu temperature memory weather date
 ;modules-center = music
 
-cursor-click = pointer
-
-; Place bar at the bottom
-bottom = true
+monitor = ${env:LEFT_MONITOR}
 
 tray-position = none
 
-; Required for i3 compatability
-wm-restack = i3
-override-redirect = true
-
 
 [bar/double-right]
-width = 100%
-height = 34pt
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-; Underline/overline line weight
-line-size = 4pt
-
-; Required for any polybar-msg
-enable-ipc = true
-
-monitor = ${env:RIGHT_MONITOR}
-
-module-margin = 1px
-
-; modules default to font-0
-; font references are 1-indexed
-font-0 = monospace
-font-1 = FontAwesome
-font-2 = MaterialDesignIconsDesktop
-font-3 = Weather Icons:style=Regular
-font-4 = Inconsolata Regular Nerd Font Complete Mono Windows Compatible
+inherit = global-bar
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
 modules-right =  battery-script pulseaudio cpu temperature memory weather date
 ;modules-center = music
 
-cursor-click = pointer
-
-; Place bar at the bottom
-bottom = true
+monitor = ${env:RIGHT_MONITOR}
 
 tray-position = right
 
-; Required for i3 compatability
-wm-restack = i3
-override-redirect = true
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
 [module/xworkspaces]
