remove builtin battery module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -70,7 +70,7 @@ tray-output = right
 inherit = global-bar
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
-modules-right =  battery-script pulseaudio cpu temperature memory weather date
+modules-right =  cpu temperature memory filesystem date
 ;modules-center = music
 
 monitor = ${env:LEFT_MONITOR}
@@ -88,8 +88,6 @@ modules-right =  battery-script pulseaudio cpu temperature memory weather date
 monitor = ${env:RIGHT_MONITOR}
 
 tray-position = right
-
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
 [module/xworkspaces]
@@ -118,7 +116,6 @@ label-empty-padding = 1
 ; Show only workspaces on same display as bar
 pin-workspaces = true
 
-; Currently inactive
 [module/filesystem]
 type = internal/fs
 
@@ -170,66 +167,6 @@ format-padding = 1px
 format-underline = ${colors.active-underline}
 
 label = %percentage_used:2%%
-
-
-; Inactive
-[module/battery]
-type = internal/battery
-
-low-at = 20
-
-battery = BAT0
-time-format = %H:%M
-
-; Display charging symbol sequence w/ charge %
-format-charging = <animation-charging> <label-charging>
-label-charging = "%percentage%%"
-format-charging-padding = 1px
-format-charging-underline = ${colors.active-underline}
-format-charging-font = 2
-
-; Display battery symbol which corresponds to current %
-format-discharging = <ramp-capacity> <label-discharging>
-label-discharging = "%percentage%%"
-format-discharging-padding = 1px
-format-discharging-underline = ${colors.active-underline}
-format-discharging-font = 2
-
-format-full = <ramp-capacity> <label-full>
-label-full = "%percentage%%"
-format-full-padding = 1px
-format-full-underline = ${colors.green}
-format-full-font = 2
-
-; Display low symbol sequence w/ charge %
-format-low = <animation-low> <label-low>
-label-low = "%percentage%%"
-format-low-padding = 1px
-format-low-underline = ${colors.alert}
-format-low-font = 2
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-
-; Milliseconds
-animation-charging-framerate = 1000
-
-animation-low-0 = 
-animation-low-1 = " "
-
-; Milliseconds
-animation-low-framerate = 500
-
-; Seconds
-poll-interval = 5
 
 
 [module/cpu]
