wifi module when docked

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -65,30 +65,76 @@ modules-right =  battery-script pulseaudio cpu temperature memory weather date
 
 tray-output = right
 
+; Bar specific date module format
+date-format = " %l:%M %p   %m/%d/%Y"
+date-right-padding = 0px
 
 [bar/double-left]
 inherit = global-bar
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
-modules-right =  cpu temperature memory filesystem date
+modules-right =  wireless cpu temperature memory filesystem date empty-pad
 ;modules-center = music
 
 monitor = ${env:LEFT_MONITOR}
 
 tray-position = none
 
+; Bar specific date-format module format
+date-format = " %l:%M %p"
 
 [bar/double-right]
 inherit = global-bar
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
-modules-right =  battery-script pulseaudio cpu temperature memory weather date
+modules-right =  battery-script pulseaudio weather date
 ;modules-center = music
 
 monitor = ${env:RIGHT_MONITOR}
 
+; Bar specific date-format module format
+date-format = " %l:%M %p   %m/%d/%Y"
+date-right-padding = 0px
+
 tray-position = right
 
+[module/empty-pad]
+type = custom/text
+content = " "
+content-background = ${colors.background}
+content-foreground = ${colors.background}
+
+; [module/wired]
+; type = internal/network
+; interface = ;;;;;;
+
+; speed-unit = ''
+
+; TODO - Finish formatting wireless
+[module/wireless]
+type = internal/network
+
+interval = 2.5
+
+interface = wlp0s20f3
+
+format-connected = <label-connected> 
+label-connected = 󰖩 %essid% %downspeed:9%
+format-connected-underline = ${colors.active-underline}
+format-connected-padding = 1px
+
+format-disconnected = <label-disconnected>
+label-disconnected = 󱛅
+format-disconnected-underline = ${colors.alert}
+format-disconnected-padding = 1px
+
+format-packetloss = <animation-packetloss> <label-connected>
+format-packetloss-underline = ${colors.active-underline}
+format-packetloss-padding = 1px
+
+animation-packetloss-0 = 󱚵
+animation-packetloss-1 = 󰖩
+animation-packetloss-framerate = 500
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -126,8 +172,8 @@ mount-0 = /
 
 label-mounted = %mountpoint% %percentage_used%%
 
-format-padding = 1px
-format-underline = ${colors.active-underline}
+label-mounted-padding = 1px
+label-mounted-underline = ${colors.active-underline}
 
 
 [module/pulseaudio]
@@ -175,7 +221,7 @@ type = internal/cpu
 ; Seconds
 interval = 2
 
-# Speedometer symbol
+; Speedometer symbol
 format-prefix = " "
 format-prefix-font = 1
 format-prefix-foreground = ${colors.light-text}
@@ -196,13 +242,14 @@ type = internal/date
 interval = 1
 
 ; Clock symbol    Calendar symbol
-date = " %l:%M %p   %m/%d/%Y"
+date = ${root.date-format}
 
 label = %date%
 label-foreground = ${colors.light-text}
 
 format-padding = 1px
 format-underline = ${colors.active-underline}
+module-margin-right = ${root.date-right-padding}
 
 format-font = 1
 
@@ -215,7 +262,7 @@ interval = 5
 
 ; /sys info
 thermal-zone = 0
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon5/temp1_input
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
 
 ; True for Fahrenheit, false for Celsius
 units = true
