various transparency additions

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,11 +1,11 @@
 [colors]
 disabled=#707880
 
-background=#3c3836
+background=#961d2021
 foreground=#d5c4a1
 
-active-bg=#32302f
-active-underline=#fabd2f
+active-bg=#961d2021
+active-underline=#c8d79921
 active-text=#fabd2f
 
 separator=#696563
@@ -13,10 +13,10 @@ separator=#696563
 passive-text=#5e5855
 passive-bg=#707880
 
-alert=#ff5c33
+alert=#c8ff5c33
 
-green = #40bf40
-success = #4db34d
+green = #c840bf40
+success = #c84db34d
 
 light-text=#d5c4a1
 
@@ -162,7 +162,7 @@ label-empty-padding = 1
 ; Show only workspaces on same display as bar
 pin-workspaces = true
 
-[module/filesystem]
+[odule/filesystem]
 type = internal/fs
 
 ; seconds
