Split monitor music settings

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -69,6 +69,9 @@ tray-output = right
 date-format = " %l:%M %p   %m/%d/%Y"
 date-right-padding = 0px
 
+; Bar specific music output setting
+music_exec = $HOME/.config/polybar/music 0
+
 [bar/double-left]
 inherit = global-bar
 
@@ -83,10 +86,12 @@ tray-position = none
 ; Bar specific date-format module format
 date-format = " %l:%M %p"
 
+music_exec = $HOME/.config/polybar/music 1
+
 [bar/double-right]
 inherit = global-bar
 
-modules-left = xworkspaces music-prev music-playpause music-next  music 
+modules-left = xworkspaces
 modules-right =  battery-script pulseaudio weather date
 ;modules-center = music
 
@@ -104,13 +109,7 @@ content = " "
 content-background = ${colors.background}
 content-foreground = ${colors.background}
 
-; [module/wired]
-; type = internal/network
-; interface = ;;;;;;
 
-; speed-unit = ''
-
-; TODO - Finish formatting wireless
 [module/wireless]
 type = internal/network
 
@@ -162,7 +161,7 @@ label-empty-padding = 1
 ; Show only workspaces on same display as bar
 pin-workspaces = true
 
-[odule/filesystem]
+[module/filesystem]
 type = internal/fs
 
 ; seconds
@@ -280,7 +279,7 @@ interval = 0.5
 
 ; Display script stdout
 label = %output%
-exec = $HOME/.config/polybar/music_ctl.sh info 2> $HOME/.config/polybar/scriptlog.txt
+exec = ${root.music_exec}
 
 format-padding = 1px
 format-font = 2
