--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -60,7 +60,7 @@ override-redirect = true
 inherit = global-bar
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
-modules-right =  battery-script pulseaudio cpu temperature memory weather date
+modules-right =  wireless battery-script pulseaudio cpu temperature memory weather date
 ;modules-center = music
 
 tray-output = right
