--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,25 +1,4 @@
-[colors]
-disabled=#707880
-
-background=#961d2021
-foreground=#d5c4a1
-
-active-bg=#961d2021
-active-underline=#c8d79921
-active-text=#fabd2f
-
-separator=#696563
-
-passive-text=#5e5855
-passive-bg=#707880
-
-alert=#c8ff5c33
-
-green = #c840bf40
-success = #c84db34d
-
-light-text=#d5c4a1
-
+include-file=$HOME/.config/polybar/colors.ini
 
 [settings]
 screenchange-reload = false
@@ -28,8 +7,8 @@ screenchange-reload = false
 width = 100%
 height = 34pt
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${util-colors.background}
+foreground = ${util-colors.foreground}
 
 ; Underline/overline line weight
 line-size = 4pt
@@ -106,8 +85,8 @@ tray-position = right
 [module/empty-pad]
 type = custom/text
 content = " "
-content-background = ${colors.background}
-content-foreground = ${colors.background}
+content-background = ${util-colors.background}
+content-foreground = ${util-colors.foreground}
 
 
 [module/wireless]
@@ -119,16 +98,16 @@ interface = wlp0s20f3
 
 format-connected = <label-connected> 
 label-connected = 󰖩 %essid% %downspeed:9%
-format-connected-underline = ${colors.active-underline}
+format-connected-underline = ${util-colors.accent}
 format-connected-padding = 1px
 
 format-disconnected = <label-disconnected>
 label-disconnected = 󱛅
-format-disconnected-underline = ${colors.alert}
+format-disconnected-underline = ${util-colors.alert}
 format-disconnected-padding = 1px
 
 format-packetloss = <animation-packetloss> <label-connected>
-format-packetloss-underline = ${colors.active-underline}
+format-packetloss-underline = ${util-colors.accent}
 format-packetloss-padding = 1px
 
 animation-packetloss-0 = 󱚵
@@ -140,9 +119,9 @@ type = internal/xworkspaces
 
 ; Active workspace settings
 label-active = %name%
-label-active-background = ${colors.active-bg}
-label-active-foreground = ${colors.active-text}
-label-active-underline = ${colors.active-underline}
+label-active-background = ${util-colors.alt-background}
+label-active-foreground = ${util-colors.accent}
+label-active-underline = ${util-colors.accent}
 label-active-padding = 1
 
 ; Inactive workspaces w/ content
@@ -150,12 +129,12 @@ label-occupied = %name%
 label-occupied-padding = 1
 
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${util-colors.alert}
 label-urgent-padding = 1
 
 ; Fixes empty padding between workspaces that cross monitors
 label-empty = %name%
-label-empty-foreground = ${colors.disabled}
+label-empty-foreground = ${util-colors.alt-bg}
 label-empty-padding = 1
 
 ; Show only workspaces on same display as bar
@@ -172,7 +151,7 @@ mount-0 = /
 label-mounted = %mountpoint% %percentage_used%%
 
 label-mounted-padding = 1px
-label-mounted-underline = ${colors.active-underline}
+label-mounted-underline = ${util-colors.accent}
 
 
 [module/pulseaudio]
@@ -180,7 +159,7 @@ type = internal/pulseaudio
 
 ; Speaker symbol
 format-volume-prefix = " "
-format-volume-prefix-foreground = ${colors.light-text}
+format-volume-prefix-foreground = ${util-colors.foreground}
 format-volume-prefix-font = 1
 format-volume = <label-volume>
 
@@ -188,13 +167,13 @@ label-volume = %percentage:2%%
 
 ; Muted speaker w/ volume%
 label-muted = "󰖁 %percentage%%"
-label-muted-foreground = ${colors.light-text}
+label-muted-foreground = ${util-colors.foreground}
 format-muted-padding = 1px
-format-muted-underline = ${colors.alert}
+format-muted-underline = ${util-colors.alert}
 format-muted-font = 1
 
 format-volume-padding = 1px
-format-volume-underline = ${colors.active-underline}
+format-volume-underline = ${util-colors.accent}
 
 
 [module/memory]
@@ -205,11 +184,11 @@ interval = 2
 
 ; Brain symbol
 format-prefix = "󰧑 "
-format-prefix-foreground = ${colors.light-text}
+format-prefix-foreground = ${util-colors.foreground}
 format-prefix-font = 2
 
 format-padding = 1px
-format-underline = ${colors.active-underline}
+format-underline = ${util-colors.accent}
 
 label = %percentage_used:2%%
 
@@ -223,15 +202,15 @@ interval = 2
 ; Speedometer symbol
 format-prefix = " "
 format-prefix-font = 1
-format-prefix-foreground = ${colors.light-text}
+format-prefix-foreground = ${util-colors.foreground}
 label = "%percentage:2%%"
 
 format-padding = 1px
-format-underline = ${colors.active-underline}
+format-underline = ${util-colors.accent}
 
 warn-percentage = 80
 label-warn = "%percentage:2%%"
-format-warn-underline = ${colors.alert}
+format-warn-underline = ${util-colors.alert}
 
 
 [module/date]
@@ -244,10 +223,10 @@ interval = 1
 date = ${root.date-format}
 
 label = %date%
-label-foreground = ${colors.light-text}
+label-foreground = ${util-colors.foreground}
 
 format-padding = 1px
-format-underline = ${colors.active-underline}
+format-underline = ${util-colors.accent}
 module-margin-right = ${root.date-right-padding}
 
 format-font = 1
@@ -268,7 +247,7 @@ units = true
 label = " %temperature-c%"
 
 format-padding = 1px
-format-underline = ${colors.active-underline}
+format-underline = ${util-colors.accent}
 
 
 [module/music]
@@ -290,7 +269,7 @@ type = custom/script
 ; Display script stdout
 label = %output%
 format-label-font = 6
-format-label-foreground = ${colors.light-text}
+format-label-foreground = ${util-colors.foreground}
 
 exec = $HOME/.config/polybar/music_ctl.sh player prev
 click-left = exec $HOME/.config/polybar/music_ctl.sh player prev 1 2> $HOME/.config/polybar/scriptlog.txt
@@ -304,7 +283,7 @@ interval = 0.1
 ; Display script stdout
 label = %output%
 format-label-font = 4
-format-label-foreground = ${colors.light-text}
+format-label-foreground = ${util-colors.foreground}
 
 exec = $HOME/.config/polybar/music_ctl.sh player playpause  2> $HOME/.config/polybar/scriptlog.txt
 click-left = exec $HOME/.config/polybar/music_ctl.sh player playpause 1 2> $HOME/.config/polybar/scriptlog.txt
@@ -315,7 +294,7 @@ type = custom/script
 ; Display script stdout
 label = %output%
 format-label-font = 6
-format-label-foreground = ${colors.light-text}
+format-label-foreground = ${util-colors.foreground}
 
 exec = $HOME/.config/polybar/music_ctl.sh player next 2> $HOME/.config/polybar/scriptlog.txt
 click-left = exec $HOME/.config/polybar/music_ctl.sh player next 1 2> $HOME/.config/polybar/scriptlog.txt
@@ -329,7 +308,7 @@ interval = 30
 ; Display script stdout
 label = %output%
 format-label-font = 4
-format-underline = ${colors.active-underline}
+format-underline = ${util-colors.accent}
 
 exec = $HOME/.config/polybar/weather
 
