--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -55,7 +55,7 @@ music_exec = $HOME/.config/polybar/music 0
 inherit = global-bar
 
 modules-left = xworkspaces music-prev music-playpause music-next  music 
-modules-right =  wireless cpu temperature memory filesystem date empty-pad
+modules-right =  wired wireless cpu temperature memory filesystem date empty-pad
 ;modules-center = music
 
 monitor = ${env:LEFT_MONITOR}
@@ -113,6 +113,33 @@ format-packetloss-padding = 1px
 animation-packetloss-0 = 󱚵
 animation-packetloss-1 = 󰖩
 animation-packetloss-framerate = 500
+
+[module/wired]
+type = internal/network
+
+interval = 2.5
+
+interface = enx00051b59ec6c
+
+format-connected = <label-connected> 
+label-connected = 󰱓 %local_ip% %downspeed:9%
+format-connected-underline = ${util-colors.accent}
+format-connected-padding = 1px
+
+format-disconnected = <label-disconnected>
+label-disconnected = 󰅛
+format-disconnected-underline = ${util-colors.alert}
+format-disconnected-padding = 1px
+
+format-packetloss = <animation-packetloss> <label-connected>
+format-packetloss-underline = ${util-colors.accent}
+format-packetloss-padding = 1px
+
+animation-packetloss-0 = 󰛴
+animation-packetloss-1 = 󰱦
+animation-packetloss-framerate = 500
+
+
 
 [module/xworkspaces]
 type = internal/xworkspaces
