--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,11 +25,14 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessUp exec increase_brightness
 bindsym XF86MonBrightnessDown exec decrease_brightness
 
+# Toggle light and dark mode
+bindsym $mod+Shift+t exec "light_dark.py"
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec alacritty
 
 # show and hide notepads
 bindsym $mod+p exec "xpad -t"
@@ -226,11 +229,13 @@ for_window [class="^Tk"] floating toggle
 
 bindsym $mod+r mode "resize"
 
+
 # class                 border  backgr. text    indicator
-client.focused          #3c3836 #32302f #fabd2f #fabd2f
-client.focused_inactive #3c3836 #504945 #d5c4a1 #504945
-client.unfocused        #3c3836 #504945 #d5c4a1 #504945
-client.urgent           #7c6f64 #fabd2f #3c3836 #fabd2f
+client.focused          #3c3836 #32302f  #d79921     #d79921
+client.focused_inactive #3c3836 #594945 #d5c4a1 #594945
+client.unfocused        #3c3836 #594945 #d5c4a1 #594945
+client.urgent           #7c6f64      #d79921          #3c3836 #d79921
+
 
 # $i3-background
 exec_always --no-startup-id xsetroot -solid '#3c3836'
