--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -3,6 +3,7 @@ include-file=$HOME/.config/polybar/colors.ini
 [settings]
 screenchange-reload = false
 
+
 [global-bar]
 width = 100%
 height = 34pt
@@ -30,6 +31,8 @@ cursor-click = pointer
 
 bottom = true
 
+tray-position=right
+
 ; Required for i3 compatability
 wm-restack = i3
 override-redirect = true
@@ -41,8 +44,6 @@ inherit = global-bar
 modules-left = xworkspaces music-prev music-playpause music-next  music 
 modules-right =  wireless battery-script pulseaudio cpu temperature memory weather date
 ;modules-center = music
-
-tray-output = right
 
 ; Bar specific date module format
 date-format = " %l:%M %p   %m/%d/%Y"
